...
        android:id="@+id/filter"
        android:title="Filter"
        android:icon="@drawable/ic_filter"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/sort"
        android:title="Sort"
        android:icon="@drawable/ic_sort"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/sortByName"
                android:title="Sort By Name" />

            <item
                android:id="@+id/sortByDistance"
                android:title="Sort By Distance" />
        </menu>

    </item>

</menu>
